modified ui change and integration based on date

--- a/src/import/ui/stylesheets/_colors.scss
+++ b/src/import/ui/stylesheets/_colors.scss
@@ -26,6 +26,8 @@ $picton-blue: #47A1CE;
 $medium-orchid: #C86DD7;
 $blue-stone: #194F68;
 $emerald-green: #57CA85;
+$blue-light: #2792e8;
+$blue-medium: #299cf7;
 
 
 
