--- a/src/import/ui/stylesheets/_margins_and_paddings.scss
+++ b/src/import/ui/stylesheets/_margins_and_paddings.scss
@@ -5,3 +5,11 @@
 .pb-4px{
   padding-bottom: $fs-4px !important;
 }
+
+.pl-4px{
+ padding-left: $fs-4px !important;
+}
+
+.pl-8px{
+  padding-left: $fs-8px !important;
+ }
